[package]
name = "rusttyc"
version = "0.6.0"
authors = ["Maximilian Schwenger <maximilian.schwenger@cispa.de>", "Florian Kohn <florian.kohn@cispa.de>"]
edition = "2018"
license = "MIT"
description = "A library for writing type checkers with a lattice-like type system in rust."
documentation = "https://schwenger.github.io/RustTyC/"
repository = "https://github.com/Schwenger/RustTyC/"
keywords = ["Types", "TypeChecker", "Lattice"]
categories = ["parsing"]

[[example]]
name = "parametrized_function"
